Version 10 

--Bouncing enemy bullets are now properly killed when enemy is killed (thanks 
  Alexey Zubkov).




Version 9    2011-February-9

--Added a robot-player mode for testing.

--Fixed crash on pause after picking up a token that was recently entered 
  (thanks Rico).

--Fixed a crash caused by high-level burst bullets (thanks Alexey Zubkov). 

--Fixed to stop playback and print message when end of recorded game file is
  reached (helpful for debugging).

--Display rough estimate of playback fraction on screen.

--Fixed player positioning round-off errors that were causing sprite artifacts.

--Changed the way that heart tokens work (drop-off when player/enemy hit).

--Fixed a potentially fatal bug in the way enemies track the bullet they are 
  dodging.

--After rising back from a knock-down, level is completely reset (to thwart 
  skill-free grinding play).

--Changed to soften knock-down by leaving players with SOME of their powers. 

--Changed the conditions under which powers are passed upward (after knock down
  recovery and fresh-rise only).

--Eyes closed on all selves above you in infinite rise trunk to make new 
  power-pass-up thematicaly consistent (pass-up only to sleepers).

--Removed brief period of player immortality after rise-out. 

--Added gradual decay of passed-up powers to prevent same favorite set from 
  being used forever.

--Changed [X] and [Y] in tutorial to [That] and [This] to avoid keyboard 
  confusion.

--Improved power-up slots in dashboard to separate set visually from power that
  we're inside.

--Changed BURST power so that it only bursts in open space, not if it hits 
  something (thanks Rico).

--Fixed map generation so that diagonal gaps never occur.

--The mouse speed setting is now saved in recorded game files.

--Alt-tab now minimizes game out of full-screen mode (thanks Andrew McClure).

--Improved enemy aiming when there's no straight-line path to player.
