@@ -3,6 +3,8 @@ Version 10
 --Bouncing enemy bullets are now properly killed when enemy is killed (thanks 
   Alexey Zubkov).
 
+--Fixed bug in resetting containing enemy or token powers after knock-down.
+
 
 
 
